--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                 
                   <div class="carousel-inner" id="myCourasel">
                     <div class="carousel-item active" data-bs-interval="10000">
-                      <img src="assets/slide-1.jpg" class="d-block w-100" alt="blog-post2">
+                      <img src="slide-1.jpg" class="d-block w-100" alt="blog-post2">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Blog Post 1</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam faucibus felis non ante commodo, nec tincidunt odio mollis. Phasellus at lobortis mi.</p>
